# excel-to-dbt-generator

./: .gitignore  README.md  pyproject.toml
src/pipeline_generator/: app.py
src/pipeline_generator/parsers/: excel_inspector.py
src/pipeline_generator/reports/: inspection_report.py
