[project]
name = "metadata-driven-pipeline-generator"
version = "0.1.0"
description = "A metadata-driven tool to inspect Excel specifications and generate data pipeline artifacts."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]